teacher has classhasteahcerservice getavailableteacher finish